@@ -1,17 +1,17 @@
 package dsalgo.datastructure.queue;
 
 import dsalgo.datastructure.linkedlist.EmptyLinkedList;
-import revision.LinkedList.MyLinkedList;
+import dsalgo.datastructure.linkedlist.MyLinkedList;
 
 public class MyQueue<E> {
     MyLinkedList<E> ll = new MyLinkedList<>();
 
     public void enqueue(E data){
-        ll.add(data);
+        ll.addFirst(data);
     }
 
     public E dequeue() throws EmptyLinkedList {
-        return ll.remove(0);
+        return ll.removeFirst();
     }
 
     public void print() throws EmptyLinkedList {
